# HR-Management-System

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  accounts.csv  data.csv  lichsu.csv  nhanvien.csv  phongban.csv
.github/workflows/: c-cpp.yml
data/: accounts.csv  chucdanh.csv  lichsu.csv  nhanvien.csv  nhanvien_phucloi.csv  phongban.csv  phucloi.csv
include/: Account.h  ChucDanh.h  Database.h  Date.h  GlobalConfig.h  Helper.h  LichSuThayDoi.h  NVHoaHong.h  NVLuongCung.h  NVTheoGio.h  Nguoi.h  NhanVien.h  PhongBan.h  PhucLoi.h  QuanLyNhanSu - Copy.h  QuanLyNhanSu.h
src/: Account.cpp  ChucDanh.cpp  Database.cpp  Date.cpp  Helper.cpp  NVHoaHong.cpp  NVLuongCung.cpp  NVTheoGio.cpp  Nguoi.cpp  NhanVien.cpp  PhongBan.cpp  PhucLoi.cpp  QuanLyNhanSu.cpp
